thumbnail vertical scroll effect

--- a/src/index.css
+++ b/src/index.css
@@ -210,3 +210,11 @@
 .ant-carousel .slick-list {
   overflow: hidden !important;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
